# OpenJyotish

./: .gitignore  .opencode.jsonc  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  PATH.txt  PLAN.md  README.md  SECURITY.md  VISION.md  build_atlas.py  download_ephe.py  download_ephe.sh  install.bat  install.sh  make_release.sh  pyproject.toml  requirements.txt  run.bat  run.sh  settings.txt  update.bat
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: release.yml
data/: Aurobindo Ghose.jhd  Author of this software.jhd  India.jhd  Maharshi Mahesh Yogi.jhd  Mahatma Gandhi.jhd  Pandit Sanjay Rath.jhd  Prof. B. Suryanarain Rao.jhd  Prof. B. V. Raman.jhd  Ramakrishna Paramahansa.jhd  Ramana Maharshi.jhd  Sarada Mata.jhd  Sri P.V.S. Chalapathi Rao (astrologer).jhd  Sri Satya Sai Baba (Puttaparthy).jhd  Swami Chandrasekhara Saraswati.jhd  Swami Jayendra Saraswati.jhd  Swami Narasimha Bharathi.jhd  Swami Sivananda.jhd  Swami Vivekananda.jhd  cities.db  jhd_samples.json
docs/: JHORA_UI_REFERENCE.md  SESSION_SUMMARY.md  function_map.md  python_architecture.md  swe_xrefs.md  tools.md  varga_charts.md
docs/help/: 00_INDEX.md  00_what_is_vedic_astrology.md  01_what_is_vedic_astrology.md  02_what_is_vedic_astrology.md  03_what_is_vedic_astrology.md  04_building_blocks_of_chart_analysis.md  05_building_blocks_of_chart_analysis.md  06_building_blocks_of_chart_analysis.md  07_building_blocks_of_chart_analysis.md  08_building_blocks_of_chart_analysis.md  09_building_blocks_of_chart_analysis.md  10_building_blocks_of_chart_analysis.md  11_building_blocks_of_chart_analysis.md  12_building_blocks_of_chart_analysis.md  13_building_blocks_of_chart_analysis.md  14_building_blocks_of_chart_analysis.md  15_building_blocks_of_chart_analysis.md  16_building_blocks_of_chart_analysis.md  17_building_blocks_of_chart_analysis.md  18_building_blocks_of_chart_analysis.md  19_timing_with_dasa_systems.md  20_timing_with_dasa_systems.md  21_timing_with_dasa_systems.md  22_timing_with_dasa_systems.md  23_timing_with_dasa_systems.md  24_timing_with_dasa_systems.md  25_timing_with_dasa_systems.md  26_timing_with_dasa_systems.md  27_timing_with_dasa_systems.md  28_timing_with_dasa_systems.md  29_timing_with_dasa_systems.md  30_timing_with_transits.md  31_timing_with_transits.md  32_timing_with_transits.md  33_tajaka_solar_return_charts.md  34_tajaka_solar_return_charts.md  35_tajaka_solar_return_charts.md  36_miscellaneous_topics.md  37_miscellaneous_topics.md  38_miscellaneous_topics.md  (+23 more)
src/jhora/: __init__.py  __main__.py
src/jhora/ai/: analysis.py  embeddings.py  engine.py  json_export.py  prompts.py  teacher.py
src/jhora/calc/: __init__.py  angles.py  arudha.py  ashtakavarga.py  bhava_bala.py  chakras.py  chalit.py  comparison.py  dasa_timeline.py  dignities.py  ephemeris.py  gochara.py  karaka.py  kuja_dosha.py  kuta.py  learning.py  monthly_panchanga.py  muhurta.py  mundane.py  prasna.py  progressions.py  sahama.py  shadbala.py  special_lagnas.py  tajaka.py  tithi_pravesha.py  upagraha.py  vimsopaka.py  yogas.py
src/jhora/charts/: __init__.py  chart.py  varga.py
src/jhora/cli/: __init__.py  main.py
src/jhora/core/: database.py
src/jhora/io/: atlas.py  (+2 more)
tests/: conftest.py  test_ai.py  test_angles.py  test_arudha.py  test_ashtakavarga.py  test_ashtottari.py  test_atlas.py  test_bhava_bala.py  test_chart.py  test_cli.py  test_dasas_base.py  test_dignities.py  test_ephemeris.py  test_gochara.py  test_gui_flow.py  test_gui_populate.py  test_interpreter.py  test_jhd_samples.py  test_karaka.py  test_kuja_dosha.py  test_kuta.py  test_muhurta.py  test_prasna.py  test_sahama.py  test_shadbala.py  test_tajaka.py  test_types.py  test_varga.py  test_vimsopaka.py  test_vimsottari.py  test_yogas.py
(+28 files in other folders)
