[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openjyotish"
version = "1.1.0"
description = "Free, open-source, cross-platform Vedic astrology toolkit with AI-powered chart readings."
readme = "README.md"
authors = [
    {name = "Jhora Contributors"},
]
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
keywords = ["vedic", "astrology", "jyotish", "hora", "dasa", "yoga"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "PyQt6>=6.5",
    "pyswisseph>=2.10",
    "typer>=0.27.0",
    "rich>=13.0",
    "requests>=2.28",
    "prompt_toolkit>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
jhora = "jhora.__main__:main"

[project.urls]
Homepage = "https://github.com/velteyn/OpenJyotish"
Repository = "https://github.com/velteyn/OpenJyotish.git"
Issues = "https://github.com/velteyn/OpenJyotish/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jhora*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
